# construindo-api-moderna-como-produto-de-dados

./: Makefile  README.md  pyproject.toml
db/: database.db  init_db.py
source/: app.py
source/config/: containers.py
source/controller/: home.py
source/controller/v1/: quality_controller.py
source/exceptions/: quality_rule_exceptions.py  repo_exceptions.py
source/gateway/: __init__.py  sqlite_client.py
source/model/: quality_rule_model.py
source/repository/: __init__.py  sqlite_quality_rule_repository.py
source/repository/interface/: interface_quality_rule_repository.py
source/schema/: quality_rule_schema.py  response_schema.py
source/service/: __init__.py  quality_rule_service.py
source/service/interface/: interface_quality_rule_service.py
test/scenario/: quality_rule.feature
test/unit/: test_quality_controller.py  test_quality_rule_repository.py  test_quality_rule_schema.py  test_quality_rule_service.py  test_sqlite_client.py
